monticore-generator/src/test/resources/cocos/invalid/A4097/A4097a.mc4
package cocos.invalid.A4097;

grammar A4097a {

  A astextends java.util.Observer;
}